{
  "version": 4,
  "terraform_version": "0.14.5",
  "serial": 370,
  "lineage": "71ed8386-a673-545e-03b5-49911cc3cc00",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "MYSQL",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a91cd140a1fc148a",
            "arn": "arn:aws:ec2:us-east-2:982947069028:instance/i-0859f486177f0ce14",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0859f486177f0ce14",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05ba4f071b41682a2",
            "private_dns": "ip-10-0-2-150.us-east-2.compute.internal",
            "private_ip": "10.0.2.150",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c62a114cab840828",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01ad1b4e485f68617",
            "tags": {
              "Name": "MYSQL"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01d10a84fafdc4462"
            ]
          },
          "dependencies": [
            "module.security.aws_security_group.terraform",
            "module.vpc.aws_subnet.TerraPrv",
            "module.vpc.aws_vpc.NewVpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "WORDPRESS",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a91cd140a1fc148a",
            "arn": "arn:aws:ec2:us-east-2:982947069028:instance/i-0e99cf56ab461264a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e99cf56ab461264a",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07b72f8415090f1ec",
            "private_dns": "ip-10-0-1-138.us-east-2.compute.internal",
            "private_ip": "10.0.1.138",
            "public_dns": "ec2-3-23-114-113.us-east-2.compute.amazonaws.com",
            "public_ip": "3.23.114.113",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0df81a2e0deacd23a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0def150b92f5f8a8e",
            "tags": {
              "Name": "WORDPRESS"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01d10a84fafdc4462"
            ]
          },
          "dependencies": [
            "module.ec2.aws_instance.MYSQL",
            "module.security.aws_security_group.terraform",
            "module.vpc.aws_subnet.TerraPrv",
            "module.vpc.aws_subnet.TerraPub",
            "module.vpc.aws_vpc.NewVpc"
          ]
        }
      ]
    },
    {
      "module": "module.gateway",
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0fd3d35863b6b640e",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-135-31-134.us-east-2.compute.amazonaws.com",
            "public_ip": "3.135.31.134",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.gateway",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "test-env-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:982947069028:internet-gateway/igw-0b450007ea98c2304",
            "id": "igw-0b450007ea98c2304",
            "owner_id": "982947069028",
            "tags": {
              "name": "env-gw"
            },
            "vpc_id": "vpc-0d559ba9f93f98cb6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.NewVpc"
          ]
        }
      ]
    },
    {
      "module": "module.gateway",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fd3d35863b6b640e",
            "id": "nat-031ac2393f4b58473",
            "network_interface_id": "eni-05502714370031e1c",
            "private_ip": "10.0.1.150",
            "public_ip": "3.135.31.134",
            "subnet_id": "subnet-0def150b92f5f8a8e",
            "tags": {
              "Name": "nat-gateway"
            }
          },
          "dependencies": [
            "module.gateway.aws_eip.elastic_ip",
            "module.vpc.aws_subnet.TerraPub",
            "module.vpc.aws_vpc.NewVpc"
          ]
        }
      ]
    },
    {
      "module": "module.gateway",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "NAT_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-016b4cd0c795fca9a",
            "owner_id": "982947069028",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-031ac2393f4b58473",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "NAT-route-table"
            },
            "vpc_id": "vpc-0d559ba9f93f98cb6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.gateway.aws_eip.elastic_ip",
            "module.gateway.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_subnet.TerraPub",
            "module.vpc.aws_vpc.NewVpc"
          ]
        }
      ]
    },
    {
      "module": "module.gateway",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-table-test-env",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-030eab1a6ea8ed274",
            "owner_id": "982947069028",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b450007ea98c2304",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "test-env-route-table"
            },
            "vpc_id": "vpc-0d559ba9f93f98cb6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.gateway.aws_internet_gateway.test-env-gw",
            "module.vpc.aws_vpc.NewVpc"
          ]
        }
      ]
    },
    {
      "module": "module.gateway",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "associate_routetable_to_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02c1b02e70102dc98",
            "route_table_id": "rtb-016b4cd0c795fca9a",
            "subnet_id": "subnet-01ad1b4e485f68617"
          },
          "dependencies": [
            "module.gateway.aws_eip.elastic_ip",
            "module.gateway.aws_nat_gateway.nat_gateway",
            "module.gateway.aws_route_table.NAT_route_table",
            "module.vpc.aws_subnet.TerraPrv",
            "module.vpc.aws_subnet.TerraPub",
            "module.vpc.aws_vpc.NewVpc"
          ]
        }
      ]
    },
    {
      "module": "module.gateway",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00720d05bd5e52c2f",
            "route_table_id": "rtb-030eab1a6ea8ed274",
            "subnet_id": "subnet-0def150b92f5f8a8e"
          },
          "dependencies": [
            "module.gateway.aws_internet_gateway.test-env-gw",
            "module.gateway.aws_route_table.route-table-test-env",
            "module.vpc.aws_subnet.TerraPub",
            "module.vpc.aws_vpc.NewVpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:982947069028:security-group/sg-01d10a84fafdc4462",
            "description": "Allow MSQL and NGINX inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01d10a84fafdc4462",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "MySQL",
            "name_prefix": "",
            "owner_id": "982947069028",
            "revoke_rules_on_delete": false,
            "tags": {
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d559ba9f93f98cb6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.NewVpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "TerraPrv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:982947069028:subnet/subnet-01ad1b4e485f68617",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-01ad1b4e485f68617",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "982947069028",
            "tags": {
              "Name": "TerraPrv"
            },
            "vpc_id": "vpc-0d559ba9f93f98cb6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.NewVpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "TerraPub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:982947069028:subnet/subnet-0def150b92f5f8a8e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0def150b92f5f8a8e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "982947069028",
            "tags": {
              "Name": "TerraPub"
            },
            "vpc_id": "vpc-0d559ba9f93f98cb6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.NewVpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "NewVpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:982947069028:vpc/vpc-0d559ba9f93f98cb6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-078dd806feceb2319",
            "default_route_table_id": "rtb-075c899da3762adc3",
            "default_security_group_id": "sg-03e0a4a2a926cd1ae",
            "dhcp_options_id": "dopt-c0ef79ab",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0d559ba9f93f98cb6",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-075c899da3762adc3",
            "owner_id": "982947069028",
            "tags": {
              "Name": "NewVPC"
            }
          }
        }
      ]
    }
  ]
}